# testproject

./: .cruft.json  .frkl.project  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pydoc-markdown.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: build-linux.yaml  build-mac-osx.yaml
api-documentation/: index.html
ci/docker/: Dockerfile
ci/docs/: __init__.py
ci/gitlab/release/: binaries.yml  container.yml
ci/gitlab/test/: commitlint.yml  coverage.yml  flake8.yml  mypy.yml  tox.yml
docs/: install.md  usage.md
install/: index.html
scripts/build-binary/: build.sh  onefile.spec
scripts/install/: testproject.sh
search/: search_index.json
src/testproject/: __init__.py  _meta.py  defaults.py  testproject.py
tests/: conftest.py  test_testproject.py
usage/: index.html
